--- a/HotelManagementSystem.BlazorServer/Pages/_Host.cshtml
+++ b/HotelManagementSystem.BlazorServer/Pages/_Host.cshtml
@@ -14,7 +14,8 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="plugin/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="~/js/toaster/toast.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -43,7 +44,7 @@
         crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-
+<script src="~/js/toaster/toast.min.js"></script>
 <script src="~/js/Common.js"></script>
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/Microsoft.AspNetCore.ProtectedBrowserStorage/protectedBrowserStorage.js"></script>
