Resolve few bugs

--- a/HotelManagementSystem.BlazorServer/Pages/HotelRoom/Index.razor
+++ b/HotelManagementSystem.BlazorServer/Pages/HotelRoom/Index.razor
@@ -7,7 +7,7 @@
 }
 
 <div class="row mt-4">
-    <div class="col-md-12">
+    @*<div class="col-md-12">
         @if (!string.IsNullOrWhiteSpace(ErrorMessage))
         {
             <Error ErrorMessage="@ErrorMessage" />
@@ -16,7 +16,7 @@
         {
             <Success SuccessMessage="@SuccessMessage" />
         }
-    </div>
+    </div>*@
     <div class="col-md-12">
         @if (IsLoadComplete)
         {
