--- a/HotelManagementSystem.BlazorServer/Pages/HotelRoom/CreateEdit.razor
+++ b/HotelManagementSystem.BlazorServer/Pages/HotelRoom/CreateEdit.razor
@@ -15,15 +15,15 @@
                     </div>
                     <div class="form-group">
                         @*@if (!string.IsNullOrWhiteSpace(ErrorMessage))
-                        {
-                            <Error ErrorMessage="@ErrorMessage" />
-                            <ToasterMessage ToasterType="Error" ToasterHeading="Error Occured" ToasterMessage="@ErrorMessage"></ToasterMessage>
-                        }
-                        @if (!string.IsNullOrWhiteSpace(SuccessMessage))
-                        {
-                            <Success SuccessMessage="@SuccessMessage" />
-                            <ToasterMessage ToasterType="Success" ToasterHeading="Success" ToasterMessage="@SuccessMessage"></ToasterMessage>
-                        }*@
+                            {
+                                <Error ErrorMessage="@ErrorMessage" />
+                                <ToasterMessage ToasterType="Error" ToasterHeading="Error Occured" ToasterMessage="@ErrorMessage"></ToasterMessage>
+                            }
+                            @if (!string.IsNullOrWhiteSpace(SuccessMessage))
+                            {
+                                <Success SuccessMessage="@SuccessMessage" />
+                                <ToasterMessage ToasterType="Success" ToasterHeading="Success" ToasterMessage="@SuccessMessage"></ToasterMessage>
+                            }*@
 
                     </div>
                     <div class="form-group">
@@ -53,33 +53,40 @@
                     </div>
                     <div class="form-group">
                         <label>Select Images</label>
-                        <br/>
+                        <br />
                         <InputFile OnChange="HandleImageUpload" multiple></InputFile>
                         @*@if (FileUploadSuccessMessage)
-                        {
-                            <span class="text-success">File uploaded successfully. Please continue to create room.</span>
-                        }
-                        @if (FileUploadErrorMessage)
-                        {
-                            <span class="text-danger">File can not uploaded.</span>
-                        }*@
+                            {
+                                <span class="text-success">File uploaded successfully. Please continue to create room.</span>
+                            }
+                            @if (FileUploadErrorMessage)
+                            {
+                                <span class="text-danger">File can not uploaded.</span>
+                            }*@
                         <div class="row">
-                          
+
+                            @if (IsImageUploadProcessStart)
+                            {
+                            <div class="col-md-12">
+                                <span><i class="fa fa-spin fa-spinner"></i> @ImageProcessMessage</span>
+                            </div>
+                                
+                            }
                             @if (HotelRoomModel.ImageUrls != null && HotelRoomModel.ImageUrls.Count > 0)
                             {
+                                int serial = 1;
                                 foreach (var roomImage in HotelRoomModel.ImageUrls)
                                 {
-                                    int serial = 1;
                                     <div class="col-md-2 mt-3">
                                         <div class="room-image" style="background: url('@roomImage') 50% 50%;">
                                             <span class="room-image-title">@serial</span>
                                         </div>
                                         <button type="button" class="btn btn-outline-danger btn-block mt-4" @onclick="() => DeletePhoto(roomImage)">Delete Photo</button>
                                     </div>
-                                    
+                                    serial++;
                                 }
                             }
-                            
+
                         </div>
                     </div>
 
@@ -97,5 +104,5 @@
             </div>
         </div>
     </div>
-    
+
 </div>
